# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: .brain_games.py.swp  game_engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
