[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games is a set of five simple games based on mobile brain training apps"
repository = "https://github.com/vikatresk/python-project-49"
authors = ["Viktoria Treskova <vikatresk@yandex.ru>"]
classifiers = [
    "Programming Language :: Python :: 3.8.10 :: Education :: poetry"
]
readme = "README.md"
packages = [
	{include = "brain_games"}
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = 'brain_games.scripts.brain_progression:main'
brain-prime = 'brain_games.scripts.brain_prime:main'

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
